# Back-End

./: .gitignore  README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
core/: admin.py
core/migrations/: 0001_initial.py  0002_remove_user_passage_id_user_cpf.py  0002_rename_file_midia_arquivo_and_more.py  0003_remove_user_cpf_user_cpf.py  0003_rename_arquivo_midia_file.py  0004_alter_user_cpf.py  0004_item_aluguel_dias.py  0005_aluguel.py  0005_avaliacao_item_avaliacao_user.py  0005_remove_aluguel_data_devolucao_and_more.py  0006_categoria_item.py  0006_item_aluguel.py  0006_user_role.py  0007_alter_item_aluguel_quantidade.py  0007_alter_user_role.py  0007_aluguel_item_aluguel.py  0007_item_usuario_alter_item_categoria.py  0008_alter_user_role.py  0008_midia_midia_itens.py  0009_alter_aluguel_options_alter_item_options.py  0010_user_midia.py  0011_remove_user_midia_user_imagem.py  0012_rename_cpf_user_cpf.py
core/models/: __init__.py  aluguel.py  avaliacao.py  item.py  midia.py  user.py
core/permissions/: roles.py
core/serializers/: __init__.py  aluguel.py  avaliacao.py  item.py  midia.py  user.py
core/views/: __init__.py  aluguel.py  avaliacao.py  item.py  midia.py  user.py
